added music and css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<style>
+body{
+  color: teal;
+  background-color: pink;
+}
+</style>
 <html>
   <head>
     <title>TheMall</title>
@@ -10,6 +16,10 @@
   </head>
 
   <body>
+ 
     <%= yield %>
   </body>
+  <audio src="music.mp3" autoplay controls loop>
+  <p>Your browser does not support HTML5 audio playback</p>
+</audio>
 </html>
