--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@ body{
  
     <%= yield %>
   </body>
-  <audio src="music.mp3" autoplay controls loop>
+  <audio src="music.mp3" autoplay mute controls loop>
   <p>Your browser does not support HTML5 audio playback</p>
-</audio>
+  </audio>
+  <img class="bust" src='https://i.imgur.com/clMxlSV.gif' alt="Bust">
 </html>
