--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -1,9 +1,9 @@
 <h1><%= @store.id ? 'Edit Store' : 'Create Store' %></h1>
 <hr />
-<%= form_for [@store] do |f| %>
+<p><%= form_for [@store] do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name, required: true, autofocus: true %>
   <%= f.submit %>
-<% end %>
-<%= link_to 'Edit Store Items', new_store_item_path(@store) %>       <%= link_to "Delete Store", @store, method: :delete %>
+<% end %></p>
+<p><%= link_to 'Edit Store Items', new_store_item_path(@store) %>       <%= link_to "Delete Store", @store, method: :delete %></p>
 
